syntax = "proto3";

package users.protobuf;

service UserService {
	rpc GetUserDetails(GetUserDetailsRequest) returns (UserDetails);
}


message GetUserDetailsRequest {
	string id = 1;
}

message UserDetails {
	string id = 1;
	string email = 2;
	string first_name = 3;
	string last_name = 4;
	Role role = 5;
	bool is_email_confirmed = 6;
	string reset_password_token = 7;
	string email_confirmation_token = 8;
}

enum Role {
	USER = 0;
	ADMIN = 1;
}
